--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-static/* linguist-vendored
-working-html/* linguist-vendored
-*.html linguist-detectable=false
+static/* linguist-vendored=false
+working-html/* linguist-vendored=false
